<resources>
    <string name="app_name">101</string>
    <string name="login">Login</string>
    <string name="introduce_el_email">Introduce el email</string>
    <string name="email">Email</string>
    <string name="introduce_contrasena">Introduce una contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="no_cuenta_registrate">¿No tienes cuenta?\nHaz click para </string>
    <string name="Registro">Nuevo Registro</string>
    <string name="btn_registro">Registrarme</string>
    <string name="texto_enviar_login_activity">¿Ya tienes cuenta?\nHaz click aquí para hacer Login</string>
    <string name="aqui_van_los_datos_del_usuario">Aqui van los datos de usuario</string>
    <string name="Logout">Logout</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Desafios</string>
    <string name="title_notifications">Perfil</string>
    <string name="title_activity_main">MainActivity</string>


// FACEBOOK
    <string name="facebook_app_id">574819728906894</string>
    <string name="fb_login_protocol_scheme">fb574819728906894</string>
    <string name="facebook_client_token">5cb1ead010d7310b0cc92dc113855cb0</string>

// GOOGLE
    <string name="default_web_client_id">447379729778-lajtke02p8iomra9315spt8b2jj184ub.apps.googleusercontent.com</string>
</resources>