<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/grafito">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/borde_app">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="200dp"
                android:layout_height="205dp"
                android:src="@drawable/logo101" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:text="Experiences"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="350dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/borde"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingBottom="24dp"
                    android:textColorHint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/introduce_el_email"
                        android:text="@string/email"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingBottom="24dp"
                    android:textColorHint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/introduce_contrasena"
                        android:inputType="textPassword"
                        android:text="@string/contrasena"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Inicia sesión con:"
                    android:textColor="@color/turquesa"
                    android:layout_marginTop="20dp" />

                <!-- Botones de Google y Meta (Facebook) -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <!-- Botón de Google -->
                    <ImageButton
                        android:id="@+id/btnGoogle"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/googleboton"
                        android:contentDescription="Botón de Google" />

                    <!-- Espaciado entre los botones -->
                    <View
                        android:layout_width="20dp"
                        android:layout_height="match_parent" />

                    <!-- Botón de Meta (Facebook) -->
                    <ImageButton
                        android:id="@+id/btnFacebook"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/metabotton"
                        android:contentDescription="Botón de Meta (Facebook)" />

                </LinearLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"
                    android:checked="true"
                    android:text="  Guardar cuenta"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="LOGIN"
                android:background="@drawable/botones"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/no_cuenta_registrate"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvClickRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Registrarse."
                android:textColor="@color/turquesa"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
